# proxypulse

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
deploy/: install-agent.sh  install-server.sh  manage.sh  uninstall.sh
deploy/env/: agent.env.example  server.env.example
deploy/lib/: caddy.sh  common.sh  env.sh  python-install.sh
deploy/systemd/: proxypulse-agent.service.in  proxypulse-api.service.in  proxypulse-bot.service.in
docs/superpowers/plans/: 2026-07-14-readme-and-full-uninstall.md
docs/superpowers/specs/: 2026-07-14-readme-and-full-uninstall-design.md  2026-07-15-interactive-management-and-collection-scopes-design.md
src/proxypulse/: __init__.py
src/proxypulse/agent/: __init__.py  __main__.py  collectors.py  main.py  state.py
src/proxypulse/api/: __init__.py  __main__.py  main.py  webapp.py
src/proxypulse/bot/: __main__.py  collection_formatting.py  main.py
src/proxypulse/core/: collections.py  config.py  db.py  migrations.py  models.py  schemas.py  webapp_auth.py
src/proxypulse/services/: __init__.py  alerts.py  cloudflare_dns.py  dashboard.py  (+7 more)
tests/: test_bot_formatting.py  test_caddy_deploy.py  test_cloudflare_dns.py  test_collection_scopes.py  test_collectors.py  test_daily_report_usage.py  test_dashboard.py  test_deploy_management.py  test_external_notifications.py  test_external_notify_api.py  test_nodes.py  test_nullable_metrics.py  test_quota_resets.py  test_report_schedule.py  test_schemas.py  test_telegram_node_names.py  test_traffic_diagnostics.py  test_uninstall_script.py  test_webapp_auth.py
