[project]
name = "proxypulse"
version = "0.1.0"
description = "Telegram-first monitoring stack for personal proxy nodes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.19.0,<4.0.0",
  "aiosqlite>=0.21.0,<1.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "psutil>=7.0.0,<8.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

